# minispace

./: .env.example  .env.prod.example  .gitignore  ENCRYPTION_README.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  loki-config.yml  prometheus.yml  promtail-config.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20240101000001_public_schema.sql  20240101000002_tenant_schema_notes.sql  20240224000001_add_encryption_metadata.sql  20260223000001_add_announcements.sql  20260227000001_add_absent_to_daily_journals.sql  20260227000002_add_sent_at_to_daily_journals.sql  20260227000003_add_journal_auto_send_time.sql  20260227000004_add_daily_menus.sql  20260228000001_add_trial_expires.sql  20260228000002_add_consent_records_public.sql  20260228000003_add_consent_records_tenant.sql  20260228000004_add_audit_log_tenant.sql  20260301000001_add_retention_tracking.sql  20260302000001_add_attendance.sql  20260302000002_add_activities.sql  20260302000003_add_child_schedule.sql  20260303000001_update_daily_menus_sections.sql  20260303000002_add_address_fields.sql  20260303000003_make_menu_nullable.sql  20260303000004_activities_multiday_groups.sql  20260303000005_add_activity_type.sql  20260311000001_add_weather_to_daily_menus.sql
backend/src/: config.rs  lib.rs  main.rs
backend/src/db/: mod.rs  tenant.rs
backend/src/middleware/: auth.rs  mod.rs  rate_limit.rs  super_admin.rs  tenant.rs
backend/src/models/: activity.rs  announcement.rs  attendance.rs  auth.rs  child.rs  document.rs  group.rs  journal.rs  media.rs  menu.rs  message.rs  mod.rs  tenant.rs  user.rs
backend/src/routes/: activities.rs  announcements.rs  attendance.rs  audit_log.rs  auth.rs  children.rs  contact.rs  demo.rs  documents.rs  email.rs  grafana_auth.rs  groups.rs  health.rs  journal.rs  logo.rs  (+11 more)
(+104 files in other folders)
