[package]
name = "minispace-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "minispace_api"
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "encrypt-existing-files"
path = "src/bin/encrypt-existing-files.rs"

[[bin]]
name = "seed-demo"
path = "src/bin/seed-demo.rs"

[[bin]]
name = "purge-data"
path = "src/bin/purge-data.rs"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono", "migrate"] }
redis = { version = "0.27", features = ["tokio-comp", "aio"] }
jsonwebtoken = "9"
bcrypt = "0.15"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
tokio-stream = "0.1"
futures-util = "0.3"
bytes = "1"
mime = "0.3"
mime_guess = "2"
rand = "0.8"
lettre = { version = "0.11", features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder"], default-features = false }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hex = "0.4"
prometheus = "0.13"
lazy_static = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
